Supercluster/Cluster01/WebServer006/Deployment.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: WebServer006-frontend-deployment
  namespace: WebServer006
spec:
  replicas: 3
  selector:
    matchLabels:
      app: WebServer006-frontend
  template:
    metadata:
      labels:
        app: WebServer006-frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - compute
      imagePullSecrets:
        - name: github-registry
      containers:
        - name: WebServer006-frontend-container
          image: "ghcr.io/eliasdhcom/tereikenbe-frontend:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
---
