Supercluster/Cluster01/WebServer006/Service.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: v1
kind: Service
metadata:
  name: WebServer006-frontend-service
  namespace: WebServer006
spec:
  selector:
    app: WebServer006-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
