Supercluster/Cluster01/WebServer006/Ingress.yaml
############################
# @author EliasDH Team     #
# @see https://eliasdh.com #
# @since 01/01/2025        #
############################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: WebServer006-ingress
  namespace: WebServer006
  annotations:
    cert-manager.io/issuer: "WebServer006-letsencrypt-issuer"
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Redirect HTTP to HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - tereiken.be
      secretName: tereikenbe-tls
    - hosts:
      - www.tereiken.be
      secretName: wwwtereikenbe-tls
  rules:
    - host: tereiken.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: WebServer006-frontend-service
                port:
                  number: 80
    - host: www.tereiken.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: WebServer006-frontend-service
                port:
                  number: 80
---
